# chinese_ner_onnxruntime_cpp

./: .gitignore  README.md  convert_quant.py  crf.py  data_utils.py  inference.py  model.py  preprocess.py  requirements.txt  run.py  run.sh  utils.py
cpp/: CMakeLists.txt  README.md  build.sh
cpp/include/: ner.h  tokenizer.h
cpp/src/: debug.cpp  ner.cpp  tokenizer.cpp
